test/invalid/fc36956_TypeChecking_Conditionals3/GraphicObject.plume
/**
 * GraphicObject.plume
 *
 * @author Carlos Mao de Ferro
 * @version $Id: GraphicObject.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
abstract class GraphicObject extends Object is
    field x : Integer
    field y : Integer

    method moveTo : (newX : Integer, newY : Integer) -> Boolean is
        true
    
    abstract method draw : () -> Boolean
    
    abstract method resize : () -> Boolean

		